# fuel-src-20

./: .gitignore  .rustfmt.toml  Cargo.toml  Forc.toml
contracts/token_abi/: Forc.toml
contracts/token_abi/src/: main.sw
contracts/token_contract/: Forc.toml
contracts/token_contract/src/: main.sw
tests/local_tests/: mod.rs  token_init.rs  token_ownership.rs
tests/utils/: local_test_utils.rs  mod.rs
