[package]
name = "fuel-src20"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["zoey-t <https://github.com/zoey-t>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.33.0", features = ["fuel-core-lib"] }
tokio = { version = "1.24.2", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
